update main site css to fix responsiveness on mobile

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav ul {
 }
 
 section {
-    height: 100dvh;
+    height: 100vh;
 }
 
 .intro {
